# h264flow

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  setup.py
evaluate/: annotator.py  opencv.py  plot_opencv.py
example/: CMakeLists.txt  boundary.cc  camera.cc  main.cc  motion_region.cc  read_mv.cc  visualize.cc
examples/: CMakeLists.txt  benchmark.cc  benchmark.py  boundary.cc  davis.cc  ffmpeg_mv.cc  save_mv.cc  scenecut.cc  visualize.cc
ffmpeg/: CMakeLists.txt  libavflow.cc  libavflow.hh
python/: CMakeLists.txt  h264flow.cc  opencvw.hh
src/: CMakeLists.txt  consts.hh  h264.cc  h264.hh  io.cc  io.hh  main.cc  mp4.cc  mp4.hh  nal.cc  nal.hh  util.cc  util.hh
src/decoder/: consts.hh  h264.cc  h264.hh  io.cc  io.hh  mp4.cc  mp4.hh  nal.cc  nal.hh  util.cc  util.hh
src/model/: CMakeLists.txt  annotator.cc  model-io.cc  model-io.hh  train_model.cc
src/model/scripts/: process_mv.py  scale_mv.py
src/python/: CMakeLists.txt  h264flow.cc
src/query/: operator.cc  operator.hh
src/util/: argparser.hh  exception.hh  filesystem.hh
