set(PYBIND11_CPP_STANDARD -std=c++14)
find_package(pybind11)
if (pybind11_FOUND)
    pybind11_add_module(h264flow h264flow.cc)
    target_link_libraries(h264flow pybind11::module)
    target_link_libraries(h264flow h264)
    set_target_properties(h264flow PROPERTIES PREFIX "${PYTHON_MODULE_PREFIX}"
        SUFFIX "${PYTHON_MODULE_EXTENSION}")
else()
    MESSAGE("pybind11 not found")
endif()
